--- a/src/application/GUI.fxml
+++ b/src/application/GUI.fxml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="894.0" prefWidth="1254.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="894.0" prefWidth="1254.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Main">
    <children>
-      <ImageView fx:id="item_Picture" fitHeight="150.0" fitWidth="200.0" layoutX="479.0" layoutY="174.0" pickOnBounds="true" preserveRatio="true" />
-      <ListView fx:id="list" layoutX="49.0" layoutY="174.0" prefHeight="682.0" prefWidth="366.0" />
-      <TextField fx:id="item_Name" layoutX="479.0" layoutY="370.0" />
-      <TextField fx:id="item_ID" layoutX="479.0" layoutY="422.0" />
-      <TextField fx:id="item_Color" layoutX="479.0" layoutY="474.0" />
-      <TextField fx:id="item_Price" layoutX="479.0" layoutY="528.0" />
-      <TextField fx:id="item_Condition" layoutX="479.0" layoutY="632.0" />
-      <Text layoutX="479.0" layoutY="366.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
-      <Text layoutX="479.0" layoutY="419.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
-      <Text layoutX="480.0" layoutY="470.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Color" />
-      <Text layoutX="481.0" layoutY="524.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price" />
-      <Text layoutX="479.0" layoutY="629.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Condition" />
-      <TextField fx:id="item_Size" layoutX="479.0" layoutY="581.0" />
-      <Text layoutX="479.0" layoutY="577.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Size" />
-      <TextField fx:id="item_Location" layoutX="477.0" layoutY="686.0" />
-      <Text layoutX="477.0" layoutY="682.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" />
+      <ImageView fx:id="item_Picture" fitHeight="150.0" fitWidth="200.0" layoutX="895.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true" />
+      <ListView fx:id="list" layoutX="50.0" layoutY="94.0" prefHeight="682.0" prefWidth="728.0" />
+      <TextField fx:id="item_Name" layoutX="895.0" layoutY="356.0" />
+      <TextField fx:id="item_ID" layoutX="895.0" layoutY="408.0" />
+      <TextField fx:id="item_Color" layoutX="895.0" layoutY="460.0" />
+      <TextField fx:id="item_Price" layoutX="895.0" layoutY="514.0" />
+      <TextField fx:id="item_Condition" layoutX="895.0" layoutY="618.0" />
+      <Text layoutX="895.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+      <Text layoutX="895.0" layoutY="405.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" />
+      <Text layoutX="896.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Color" />
+      <Text layoutX="897.0" layoutY="510.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Price" />
+      <Text layoutX="895.0" layoutY="615.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Condition" />
+      <TextField fx:id="item_Size" layoutX="895.0" layoutY="567.0" />
+      <Text layoutX="895.0" layoutY="563.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Size" />
+      <TextField fx:id="item_Location" layoutX="893.0" layoutY="672.0" />
+      <Text layoutX="893.0" layoutY="668.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" />
+      <Button fx:id="update" layoutX="990.0" layoutY="710.0" mnemonicParsing="false" onAction="#pop_Up" text="Update" />
+      <Button fx:id="add" layoutX="575.0" layoutY="791.0" mnemonicParsing="false" onAction="#add_Item" text="Add Item" />
+      <Button fx:id="remove" layoutX="691.0" layoutY="791.0" mnemonicParsing="false" onAction="#pop_Up" text="Remove Item" />
    </children>
 </AnchorPane>
