--- a/src/application/Add_Item.fxml
+++ b/src/application/Add_Item.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="892.0" prefWidth="731.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Main">
    <children>
-      <ImageView fx:id="add_Picture_Frame" fitHeight="150.0" fitWidth="200.0" layoutX="396.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="add_Picture_Frame" fitHeight="150.0" fitWidth="200.0" layoutX="349.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true" />
       <TextField fx:id="add_Name" layoutX="116.0" layoutY="328.0" />
       <TextField fx:id="add_ID" layoutX="116.0" layoutY="380.0" />
       <TextField fx:id="add_Color" layoutX="116.0" layoutY="432.0" />
@@ -23,8 +23,8 @@
       <Text layoutX="116.0" layoutY="535.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Size" />
       <TextField fx:id="add_Location" layoutX="114.0" layoutY="644.0" />
       <Text layoutX="114.0" layoutY="640.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Location" />
-      <Button fx:id="add_Item" layoutX="211.0" layoutY="682.0" mnemonicParsing="false" onAction="#close_PU" text="Add Item" />
+      <Button fx:id="add_Item" layoutX="211.0" layoutY="682.0" mnemonicParsing="false" onAction="#add_to_DB" text="Add Item" />
       <Text layoutX="115.0" layoutY="291.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Image " />
-      <Button fx:id="add_Picture" layoutX="213.0" layoutY="274.0" mnemonicParsing="false" text="Browse" />
+      <Button fx:id="add_Picture" layoutX="213.0" layoutY="274.0" mnemonicParsing="false" onAction="#add_Picture" text="Browse" />
    </children>
 </AnchorPane>
