--- a/src/application/Pop_Up.fxml
+++ b/src/application/Pop_Up.fxml
@@ -12,7 +12,7 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <Button fx:id="PU_Yes" layoutX="240.0" layoutY="142.0" mnemonicParsing="false" text="Yes" />
+      <Button fx:id="PU_Yes" layoutX="240.0" layoutY="142.0" mnemonicParsing="false" onAction="#yes_Click" text="Yes" />
       <Button fx:id="PU_No" layoutX="314.0" layoutY="142.0" mnemonicParsing="false" onAction="#close_PU" prefHeight="25.0" prefWidth="34.0" text="No" />
    </children>
 </AnchorPane>
